--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         resetId = setTimeout(resetBall, 6000);
       };
     </script>
-    <a-scene physics="debug:true">
+    <a-scene physics="debug:false">
       <a-assets>
         <a-asset-item id="frog" src="frog/scene.gltf"></a-asset-item>
         <a-asset-item id="tree" src="tree/scene.gltf"></a-asset-item>
